# pursuit-python

./: .gitignore  README.md  pyproject.toml
examples/: santafe.txt  simple.txt
src/pursuit/: __init__.py  execute.py  simulator.py  view.py
